# json-to-rdf-experiment

./: Cargo.toml  flake.nix
src/: main.rs  person_schema.rs
