[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2018"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "rust-nix-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.17"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
sophia = "0.7.2"
rdf_vocabularies = { version = "0.1.8", features = [
    "ns-rdf",
    "ns-foaf",
    "ns-rdfs",
    "ns-xsd",
] }
sophia_turtle = "0.7.2"
progress_bar = "1.0.3"


[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
